--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         />
         <h2>Hello.</h2>
         <p>
-          I am a Web Developer. I ❤ learning new things and acing everything I
+          I'm a Web Developer. I ❤ learning new things and acing everything I
           learn.
         </p>
         <p>Scroll down to know more about me!</p>
