--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
       href="https://fonts.googleapis.com/css2?family=Lexend:wght@400&display=swap"
       rel="stylesheet"
     />
+    <script>
+      alert("Work in progress...");
+    </script>
   </head>
   <body>
     <header class="container">
