--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
       href="https://fonts.googleapis.com/css2?family=Arizonia&family=Kumbh+Sans:wght@300&family=Meddon&family=Over+the+Rainbow&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/24b5629148.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
 
   <body>
@@ -120,18 +124,12 @@
     </div>
 
     <div class="bottom-container">
-      <a
-        class="footer-link"
-        href="https://www.linkedin.com/in/yasmeen-fatima-4b16731b0/"
-        target="_blank"
-        >LinkedIn</a
-      >
-      <a
-        class="footer-link"
-        href="https://www.instagram.com/yasmeen_4599/"
-        target="_blank"
-        >Instagram</a
-      >
+      <div class="social">
+          <i class="fa-brands fa-facebook"></i>
+          <i class="fa-brands fa-instagram"></i>
+          <i class="fa-brands fa-twitter"></i>
+          <i class="fa-brands fa-linkedin"></i>
+        </div>
       <p style="color: white">© 2021 Yasmeen Fatima.</p>
     </div>
   </body>
