--- a/index.html
+++ b/index.html
@@ -125,10 +125,8 @@
 
     <div class="bottom-container">
       <div class="social">
-          <i class="fa-brands fa-facebook"></i>
-          <i class="fa-brands fa-instagram"></i>
-          <i class="fa-brands fa-twitter"></i>
-          <i class="fa-brands fa-linkedin"></i>
+          <i class="fa-brands fa-instagram">https://www.instagram.com/yasmeen_4599/</i>
+          <i class="fa-brands fa-linkedin">https://www.linkedin.com/in/yasmeen-fatima-4b16731b0/</i>
         </div>
       <p style="color: white">© 2021 Yasmeen Fatima.</p>
     </div>
