--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
 
     <div class="bottom-container">
       <div class="social">
-          <i class="fa-brands fa-instagram"></i>
-          <i class="fa-brands fa-linkedin"></i>
+          <a href="https://www.instagram.com/yasmeen_4599/"><i class="fa-brands fa-instagram"></i></a>
+          <a href="https://www.linkedin.com/in/yasmeen-fatima-4b16731b0/"><i class="fa-brands fa-linkedin"></i></a>
       </div>
       <p style="color: white">© 2021 Yasmeen Fatima.</p>
     </div>
