--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@
       <div class="contact-me" id="contactpart">
         <h2>Get In Touch.</h2>
         <p>
-          <b>📱 WhatsApp:</b> *******073 <br />
-          <b>📷 Instagram:</b> yasmeen_4599 <br />
-          <b>📧 Email Address:</b> yasmeenfatima16@gmail.com <br /><br />
+          <b><i class="fa-brands fa-whatsapp"></i> WhatsApp:</b> *******073 <br />
+          <b><i class="fa-brands fa-instagram"></i> Instagram:</b> yasmeen_4599 <br />
+          <b><i class="fa-solid fa-at"></i> Email Address:</b> yasmeenfatima16@gmail.com <br /><br />
           <a class="btn" href="mailto:yasmeenfatima16@gmail.com">
             CONTACT ME
           </a>
