--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <p>
           <b><i class="fa-brands fa-whatsapp"></i> WhatsApp:</b> *******073 <br />
           <b><i class="fa-brands fa-instagram"></i> Instagram:</b> yasmeen_4599 <br />
-          <b><i class="fa-solid fa-at"></i> Email Address:</b> yasmeenfatima16@gmail.com <br /><br />
+          <b><i class="fa-solid fa-envelope"></i> Email Address:</b> yasmeenfatima16@gmail.com <br /><br />
           <a class="btn" href="mailto:yasmeenfatima16@gmail.com">
             CONTACT ME
           </a>
