--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       <div class="contact-me" id="contactpart">
         <h2>Get In Touch.</h2>
         <p>
-          <b><i class="fa-brands fa-whatsapp"></i> &nbsp; WhatsApp:</b> *******073 <br />
+          <b><i class="fa-brands fa-whatsapp"></i> &nbsp; WhatsApp:</b> +916309827073 <br />
           <b><i class="fa-brands fa-instagram"></i> &nbsp; Instagram:</b> yasmeen_4599 <br />
           <b><i class="fa-solid fa-envelope"></i> &nbsp; Email Address:</b> yasmeenfatima16@gmail.com <br /><br />
           <a class="btn" href="mailto:yasmeenfatima16@gmail.com">
