--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@
             src="computer.png"
             alt="Sorry! Couldn't load the image."
           />
-          <h3>Design and Development</h3>
+          <h3>Custom Coding</h3>
           <p>
             I started learning Web Development when I was 20 years old because I
             wanted to make my own professional websites. Over time, I've gained
-            a wealth of experience in designing and developing websites.
+            a wealth of experience in developing websites using HTML and CSS.
           </p>
         </div>
         <div class="skill-row">
@@ -98,12 +98,9 @@
             src="code.png"
             alt="Sorry! Couldn't load the image."
           />
-          <h3>Coding</h3>
+          <h3>WordPress Development</h3>
           <p>
-            Coding was taught to me in Computer Science Engineering and I've
-            learnt various Programming Languages like C, C++, JAVA, JavaScript
-            and others. I use the knowledge gained to embed within my websites
-            sometimes.
+            I'm also skilled in designing websites through WordPress, a platform I personally feel is the best for this task as it comes with a lot of in-built themes and plugins. I'm aware of the Elementor and Visual Composer plugins, as well as working with various themes.
           </p>
         </div>
       </div>
