--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           learn.
         </p>
         <p>Scroll down to know more about me!</p>
-        <p>👇 👇 👇</p>
+        <p><i class="fa-solid fa-hand-back-point-down"></i> <i class="fa-solid fa-hand-back-point-down"></i> <i class="fa-solid fa-hand-back-point-down"></i></p>
         <br />
       </div>
       <hr />
@@ -87,7 +87,7 @@
           />
           <h3>Custom Coding</h3>
           <p>
-            I started learning Web Development when I was 20 years old because I
+            I started learning Web Development because I
             wanted to make my own professional websites. Over time, I've gained
             a wealth of experience in developing websites using HTML and CSS.
           </p>
