--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
           <a href="https://www.instagram.com/yasmeen_4599/"><i class="fa-brands fa-instagram"></i></a>
           <a href="https://www.linkedin.com/in/yasmeen-fatima-4b16731b0/"><i class="fa-brands fa-linkedin"></i></a>
       </div>
-      <p style="color: white">© 2022 Yasmeen Fatima.</p>
+      <p style="color: white">&copy; 2022 Yasmeen Fatima.</p>
     </div>
   </body>
 </html>
