--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           learn.
         </p>
         <p>Scroll down to know more about me!</p>
-        <p><i class="fa-regular fa-hand-back-point-down" style="color:red;"></i> <i class="fa-regular fa-hand-back-point-down" style="color:red;"></i> <i class="fa-regular fa-hand-back-point-down" style="color:red;"></i></p>
+        <p><i class="fa-regular fa-hand-back-point-down" style="color: #5b8a72;"></i> <i class="fa-regular fa-hand-back-point-down" style="color: #5b8a72;"></i> <i class="fa-regular fa-hand-back-point-down" style="color: #5b8a72;"></i></p>
         <br />
       </div>
       <hr />
