--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
       <div class="social">
           <a href="https://www.instagram.com/yasmeen_4599/"><i class="fa-brands fa-instagram"></i></a>
           <a href="https://www.linkedin.com/in/yasmeen-fatima-4b16731b0/"><i class="fa-brands fa-linkedin"></i></a>
+          <a href="https://github.com/Yasmeen4599"><i class="fa-brands fa-github"></i></a>
       </div>
       <p style="color: white">&copy; 2022 Yasmeen Fatima.</p>
     </div>
